my-apps/utility/pairdrop/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pairdrop
  namespace: pairdrop
  labels:
    app.kubernetes.io/name: pairdrop
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pairdrop
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pairdrop
    spec:
      containers:
      - name: pairdrop
        image: ghcr.io/linuxserver/pairdrop:latest@sha256:aeae3b7293de7a68c37461f261cfce2babce367d4cb21730c6d380cf3facc29d
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            memory: 128Mi
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
